Automatic Paper runtime contracts and legacy Java 8 probe (#68)
* Support legacy Paper with a Java 8 compatible probe

* Publish automatic Paper runtime contracts and legacy probe pins